--- a/Sign-in.html
+++ b/Sign-in.html
@@ -26,7 +26,7 @@
       <br />
       <button id="Login-btn">LOGIN</button>
       <br />
-      <button onclick="joinAsGuest();">JOIN AS GUEST</button>
+      <button id = "Guest-btn" onclick="joinAsGuest();">JOIN AS GUEST</button>
       
     </div>
     <div class="video">
