--- a/features.html
+++ b/features.html
@@ -69,7 +69,7 @@
           >
         </div>
       </header>
-    <h1>Featured Items</h1>
+    <h1>Incoming Items</h1>
     
     <div class="container">
         <div class = "Fish">
