--- a/rewards.html
+++ b/rewards.html
@@ -23,12 +23,7 @@
     <header
 			id="Page1"
 			class="header">
-			<div class="logo">
-				<img
-					id="logo"
-					src="LosPollosHermanosLogo2.webp"
-					alt="LosPollosHermanosLogo" />
-			</div>
+			
 			<div class="nav">
 				<a
 					id="Menu"
@@ -49,6 +44,13 @@
 					rel="noopener noreferrer"
 					>Rewards</a
 				>
+				<a
+				id="Incoming"
+				href="features.html"
+				target="_blank"
+				rel="noopener noreferrer"
+				>Incoming Items</a
+			>
 				<input
 					type="search"
 					name="Searchbar"
