--- a/Who.html
+++ b/Who.html
@@ -33,7 +33,7 @@
 	</head>
 	<body>
 		<header
-		
+			id="Page1"
 			class="header">
 			<div class="logo">
 				<img
@@ -41,7 +41,14 @@
 					src="LosPollosHermanosLogo2.webp"
 					alt="LosPollosHermanosLogo" />
 			</div>
+
 			<div class="nav">
+				<a
+					id="Home"
+					href="index.html"
+					rel="noopener noreferrer"
+					>Home</a
+				>
 				<a
 					id="Menu"
 					href="MenuPage.html"
@@ -57,7 +64,6 @@
 				<a
 					id="Rewards"
 					href="rewards.html"
-					
 					rel="noopener noreferrer"
 					>Rewards</a
 				>
@@ -68,10 +74,13 @@
 					placeholder="Search" />
 			</div>
 			<div class="userNav">
-				<button class="Modalbutton Main">
-					<ion-icon name="location"></ion-icon>Set a Location
-				</button>
-
+				<a
+					id="Set-a-location"
+					href="http://"
+					target="_blank"
+					rel="noopener noreferrer">
+					<ion-icon name="location"></ion-icon>Set a Location</a
+				>
 				<a href="Sign-in.html"
 					><ion-icon
 						id="UserProf"
@@ -85,6 +94,7 @@
 				<a
 					id="Navbtn"
 					href="MenuPage.html"
+					target="_blank"
 					rel="noopener noreferrer"
 					>Order Now</a
 				>
