--- a/Who.html
+++ b/Who.html
@@ -33,7 +33,7 @@
 	</head>
 	<body>
 		<header
-		
+			id="WhoPage"
 			class="header">
 			<div class="logo">
 				<img
@@ -56,7 +56,7 @@
 				>
 				<a
 					id="Rewards"
-					href="rewards.html
+					href="rewards.html"
 					rel="noopener noreferrer"
 					>Rewards</a
 				>
@@ -73,7 +73,7 @@
 					placeholder="Search" />
 			</div>
 			<div class="userNav">
-				<button class="Modalbutton Main">
+				<button class="Modalbutton Who">
 					<ion-icon name="location"></ion-icon>Set a Location
 				</button>
 
@@ -225,64 +225,153 @@
 				</div>
 			</div>
 		</section>
-		<section class="modal Main">
+		<section class="modal Who">
 			<div class="popup-container">
-				<div
-					id="Main-Delivery-modal"
-					class="popup-card">
-					<div class="popup-head">
-						<h5>Order details</h5>
-						<button class="Closebtn Main">&times;</button>
-					</div>
-
-					<div class="P-D-btns-container">
-						<button
-							class="P-D-btns Delivery-Main"
-							id="Main-Deliverybtn">
-							Delivery
-						</button>
-						<button
-							class="P-D-btns Pickup-Main"
-							id="Main-Pickupbtn">
-							Pickup
-						</button>
-					</div>
-					<p>Place you Scheduled order right now</p>
-					<div class="form-container">
-						<div class="Main-in-container">
-							<label for="Location"><h4>Deliver To:</h4></label>
-							<input
-								name="location"
-								type="text"
-								placeholder="Enter Location" />
-						</div>
-						<div class="Main-in-container">
-							<label for="Date"><h4>Choose Date:</h4></label>
-							<select
-								name="Date"
-								id="Date-Dropdown">
-								<option value="option1">Today</option>
-								<option value="option2">tomorrow</option>
-								<option value="option3">11/10</option>
-								<option value="option4">11/11</option>
-							</select>
-						</div>
-						<div class="Main-in-container">
-							<label for="Time"><h4>Choose Time:</h4></label>
-							<select
-								name="Date"
-								id="time-Dropdown">
-								<option value="option1">12:00pm</option>
-								<option value="option2">12:30pm</option>
-								<option value="option3">1:00pm</option>
-								<option value="option4">1:30pm</option>
-							</select>
-						</div>
-					</div>
-					<button class="Update-btn">Update</button>
+			  <div id="Main-Delivery-modal" class="popup-card">
+				<div class="popup-head">
+				  <h5>ORDER DETAILS</h5>
+				  <button class="Closebtn Who">&times;</button>
 				</div>
+  
+				<div class="P-D-btns-container">
+				  <input
+							  type="checkbox"
+							  id="toggle"
+							  class="toggleCheckbox" />
+						  <label
+							  for="toggle"
+							  class="toggleContainer">
+							  <div class="DeliveryDiv Who">Delivery</div>
+							  <div class="PickupDiv Who">Pickup</div>
+						  </label>
+				</div>
+				<p class = "info-txt">Set a Delivery Address or Schedule Pickup</p>
+				<div class="form-container">
+				  <div class="Who Loc-container">
+					<div class="Address-Container">
+					  <div class="Address">
+						<h6>Street Address <span class="star">*</span></h6>
+						<input
+						  type="text"
+						  placeholder="123 Main St"
+						  id="StreetAddress"
+						  required
+						/>
+					  </div>
+					  <div class="AddressLine2">
+						<h6>Address Line 2</h6>
+						<input
+						  type="text"
+						  placeholder="Apt, Suite, Unit, etc."
+						  id="AddressLine2"
+						/>
+					  </div>
+					</div>
+					<div class="City-State">
+					  <div class="City-Container">
+						<h6>City <span class="star">*</span></h6>
+						<input
+						  type="text"
+						  placeholder="City"
+						  id="City"
+						  required
+						/>
+					  </div>
+  
+					  <div class="State-Container">
+						<h6>State/Province/Region <span class="star">*</span></h6>
+						<select id="State" required>
+						  <option value="" disabled selected>
+							Select State/Province
+						  </option>
+						  <option value="">Select State</option>
+						  <option value="AL">Alabama</option>
+						  <option value="AK">Alaska</option>
+						  <option value="AZ">Arizona</option>
+						  <option value="AR">Arkansas</option>
+						  <option value="CA">California</option>
+						  <option value="CO">Colorado</option>
+						  <option value="CT">Connecticut</option>
+						  <option value="DE">Delaware</option>
+						  <option value="FL">Florida</option>
+						  <option value="GA">Georgia</option>
+						  <option value="HI">Hawaii</option>
+						  <option value="ID">Idaho</option>
+						  <option value="IL">Illinois</option>
+						  <option value="IN">Indiana</option>
+						  <option value="IA">Iowa</option>
+						  <option value="KS">Kansas</option>
+						  <option value="KY">Kentucky</option>
+						  <option value="LA">Louisiana</option>
+						  <option value="ME">Maine</option>
+						  <option value="MD">Maryland</option>
+						  <option value="MA">Massachusetts</option>
+						  <option value="MI">Michigan</option>
+						  <option value="MN">Minnesota</option>
+						  <option value="MS">Mississippi</option>
+						  <option value="MO">Missouri</option>
+						  <option value="MT">Montana</option>
+						  <option value="NE">Nebraska</option>
+						  <option value="NV">Nevada</option>
+						  <option value="NH">New Hampshire</option>
+						  <option value="NJ">New Jersey</option>
+						  <option value="NM">New Mexico</option>
+						  <option value="NY">New York</option>
+						  <option value="NC">North Carolina</option>
+						  <option value="ND">North Dakota</option>
+						  <option value="OH">Ohio</option>
+						  <option value="OK">Oklahoma</option>
+						  <option value="OR">Oregon</option>
+						  <option value="PA">Pennsylvania</option>
+						  <option value="RI">Rhode Island</option>
+						  <option value="SC">South Carolina</option>
+						  <option value="SD">South Dakota</option>
+						  <option value="TN">Tennessee</option>
+						  <option value="TX">Texas</option>
+						  <option value="UT">Utah</option>
+						  <option value="VT">Vermont</option>
+						  <option value="VA">Virginia</option>
+						  <option value="WA">Washington</option>
+						  <option value="WV">West Virginia</option>
+						  <option value="WI">Wisconsin</option>
+						  <option value="WY">Wyoming</option>
+						</select>
+					  </div>
+					</div>
+  
+					<div class="Zip-Container">
+					  <h6>ZIP/Postal Code <span class="star">*</span></h6>
+					  <input
+						type="text"
+						placeholder="ZIP/Postal Code"
+						id="ZipCode"
+						required
+					  />
+					</div>
+				  </div>
+				  <div class="Who in-container">
+					<label for="Date"><h4>Choose Date:</h4></label>
+					<select name="Date" id="Date-Dropdown">
+					  <option value="Today">Today</option>
+					  <option value="tomorrow">tomorrow</option>
+					  <option value="11/10">11/10</option>
+					  <option value="11/11">11/11</option>
+					</select>
+				  </div>
+				  <div class="Who in-container">
+					<label for="Time"><h4>Choose Time:</h4></label>
+					<select name="Date" id="time-Dropdown">
+					  <option value="12:00pm">12:00pm</option>
+					  <option value="12:30pm">12:30pm</option>
+					  <option value="1:00pm">1:00pm</option>
+					  <option value="1:30pm">1:30pm</option>
+					</select>
+				  </div>
+				</div>
+				<button id="UpdateBtn" class="Update-Btn">Update</button>
+			  </div>
 			</div>
-		</section>
+		  </section>
 		<script
 			type="module"
 			src="script.js"></script>
