--- a/index.html
+++ b/index.html
@@ -472,18 +472,26 @@
 		<script
 			nomodule
 			src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+			<script>
+				
+			</script>
       <script>
         document.addEventListener("DOMContentLoaded", function () {
       const userStatus = localStorage.getItem("userStatus");
       if (userStatus == "guest") {
           document.getElementById("Rewards").style.display = "none";
-          document.getElementById("UserProf").style.display = "none";
+        
       }
-      else {
-          document.getElementById("Rewards").style.display = "block";
+      else if (userStatus == "use") {
           document.getElementById("UserProf").style.display = "block";
+		  document.getElementById("Rewards").style.display = "none";
       }
+	  else {
+		  document.getElementById("Rewards").style.display = "block";
+		  document.getElementById("UserProf").style.display = "block";
+	  }
   });
+
   
       </script>
 	</body>
