--- a/FinalCartpage.html
+++ b/FinalCartpage.html
@@ -41,7 +41,13 @@
 			href="https://blogfonts.com/css/aWQ9MTM4MzY5JnN1Yj0zNjkmYz1zJnR0Zj1TaGFubm9uLUJvbGQub3RmJm49c2hhbm5vbg/Shannon.otf"
 			rel="stylesheet"
 			type="text/css" />
-	
+		<script>
+			$(function () {
+				$('#svgIncludes').load(
+					'https://s3-us-west-2.amazonaws.com/s.cdpn.io/40839/svgdefs-2_copy.svg'
+				);
+			});
+		</script>
 	</head>
 	<body>
 		<!-- ----------------------------------------------------------------------- -->
@@ -121,7 +127,6 @@
 									<div class="nameEmailcard">
 										<h6>Name <span class="star">*</span></h6>
 										<input
-										id = "FirstName"
 											class="Name"
 											type="text"
 											placeholder="First Name"
@@ -130,7 +135,6 @@
 									<div class="nameEmailcard">
 										<h6>Last Name <span class="star">*</span></h6>
 										<input
-										id="LastName"
 											class="Name Last"
 											type="text"
 											placeholder="Last Name" />
@@ -289,7 +293,6 @@
 								<p id="TotalPrice">Total:</p>
 								<p id="tax">Tax:</p>
 								<p id="tip">Tip:</p>
-								<p id="Discount">Discount:</p>
 								<h4 id="FinalTotal">Order Total</h4>
 							</div>
 						</div>
@@ -475,9 +478,9 @@
 		<footer>
 			<div class="footer-container">
 				<div class="about">
-					<a href="Services.html">Services</a>
-					
-					<a href="Contact.html">Contact us</a>
+					<a href="#">Services</a>
+					<a href="#">Testimonials</a>
+					<a href="#">Contact us</a>
 				</div>
 				<div class="icon-footer">
 					<a href="http://"><ion-icon name="logo-facebook"></ion-icon></a>
