--- a/MenuPage.html
+++ b/MenuPage.html
@@ -23,13 +23,20 @@
 			rel="icon"
 			type="Image/x-icon"
 			href="LosPollosImages-gif/LosPollosHermanosLogo1.png" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Goblin+One&family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
+			rel="stylesheet" />
 	</head>
 	<body>
 		<!-- ----------------------------------------------------------------------- -->
 		<!--                            Sticky Navigation                            -->
 		<!-- ----------------------------------------------------------------------- -->
+
+		<!-- ----------------------------------------------------------------------- -->
+		<!--                            Sticky Navigation                            -->
+		<!-- ----------------------------------------------------------------------- -->
 		<header
-			id="MenuPage"
+			id="Page1"
 			class="header">
 			<div class="logo">
 				<img
@@ -56,7 +63,6 @@
 					rel="noopener noreferrer"
 					>Rewards</a
 				>
-
 				<a
 					id="Incoming"
 					href="features.html"
@@ -65,13 +71,12 @@
 				>
 				<input
 					type="search"
-					autocomplete="off"
 					name="Searchbar"
 					id="Searchbar"
 					placeholder="Search" />
 			</div>
 			<div class="userNav">
-				<button class="Modalbutton Menu">
+				<button class="Modalbutton Main">
 					<ion-icon name="location"></ion-icon>Set a Location
 				</button>
 
