--- a/MenuPage.html
+++ b/MenuPage.html
@@ -162,6 +162,35 @@
 						</div>
 					</div>
 				</section>
+
+				<!-- ----------------------------------------------------------------------- -->
+				<!--                            Footer Section                           -->
+				<!-- ----------------------------------------------------------------------- -->
+				<footer>
+					<div class="footer-container">
+						<div class="about">
+							<a href="Services.html">Services</a>
+							<a href="Contact.html">Contact us</a>
+						</div>
+						<div class="icon-footer">
+							<a href="http://"><ion-icon name="logo-facebook"></ion-icon></a>
+							<a href="http://"><ion-icon name="logo-twitter"></ion-icon></a>
+							<a
+								href="https://www.instagram.com/eatlospolloshermanos/"
+								target="_blank"
+								><ion-icon name="logo-instagram"></ion-icon
+							></a>
+						</div>
+						<section class="secret">
+							<img
+								id="SecretGus"
+								src="LosPollosImages-gif/Gus Frank Icon.svg"
+								alt="GusSecret" />
+							<audio
+								src="LosPollosImages-gif/Gustavo Frank saying hello.mp3"></audio>
+						</section>
+					</div>
+				</footer>
 				<script
 					type="module"
 					src="script.js"></script>
