--- a/MenuPage.html
+++ b/MenuPage.html
@@ -20,6 +20,9 @@
 			href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
 			rel="stylesheet" />
 		<link
+			href="https://fonts.googleapis.com/css2?family=Goblin+One&family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
+			rel="stylesheet" />
+		<link
 			rel="icon"
 			type="Image/x-icon"
 			href="LosPollosImages-gif/LosPollosHermanosLogo1.png" />
@@ -111,13 +114,6 @@
 						<li><a href="#Sandwiches">Sandwiches</a></li>
 						<li><a href="#Desserts">Desserts</a></li>
 						<li><a href="#Beverages">Beverages</a></li>
-						<li>
-							<button
-								id="D-P-Indicator Menu"
-								class="location-button">
-								<ion-icon name="pin"></ion-icon>
-							</button>
-						</li>
 					</ul>
 
 					<div
