--- a/FinalCartPage.html
+++ b/FinalCartPage.html
@@ -46,7 +46,9 @@
 		<!-- ----------------------------------------------------------------------- -->
 		<!--                            Sticky Navigation                            -->
 		<!-- ----------------------------------------------------------------------- -->
-		<header class="header">
+		<header
+			id="Page1"
+			class="header">
 			<div class="logo">
 				<img
 					id="logo"
@@ -72,6 +74,12 @@
 					rel="noopener noreferrer"
 					>Rewards</a
 				>
+				<a
+					id="Incoming"
+					href="features.html"
+					rel="noopener noreferrer"
+					>Incoming Items</a
+				>
 				<input
 					type="search"
 					name="Searchbar"
@@ -88,7 +96,7 @@
 						id="UserProf"
 						name="person-circle-outline"></ion-icon
 				></a>
-				<a href=""
+				<a href="FinalCartpage.html"
 					><ion-icon
 						id="Cart"
 						name="cart"></ion-icon
@@ -182,7 +190,7 @@
 											required />
 									</div>
 
-									<div class="State-Container">
+									<div class="State-Form-Container">
 										<h6>State/Province/Region <span class="star">*</span></h6>
 										<select
 											id="State"
@@ -444,12 +452,47 @@
 							<h4 id="Q">Qty</h4>
 							<h4 id="P">Price</h4>
 						</div>
-						<div class="Item-Qty-Price-List">
-							
-						</div>
+						<div class="Item-Qty-Price-List"></div>
 					</div>
 
 					<div class="Cart-List"></div>
+				</div>
+			</div>
+		</section>
+
+		<!-- ----------------------------------------------------------------------- -->
+		<!--                                  Modal                                  -->
+		<!-- ----------------------------------------------------------------------- -->
+
+		<section class="modal Main">
+			<div class="popup-container">
+				<div
+					id="Main-Delivery-modal"
+					class="popup-card">
+					<div class="popup-head">
+						<h5>ORDER DETAILS</h5>
+						<button class="Closebtn Main">&times;</button>
+					</div>
+
+					<div class="P-D-btns-container">
+						<input
+							type="checkbox"
+							id="toggle"
+							class="toggleCheckbox" />
+						<label
+							for="toggle"
+							class="toggleContainer">
+							<div class="DeliveryDiv Main">Delivery</div>
+							<div class="PickupDiv Main">Pickup</div>
+						</label>
+					</div>
+					<p class="info-txt">Set a Delivery Address or Schedule Pickup</p>
+					<div class="form-container"></div>
+					<button
+						id="UpdateBtn"
+						class="Update-Btn">
+						Update
+					</button>
 				</div>
 			</div>
 		</section>
@@ -461,7 +504,7 @@
 			<div class="footer-container">
 				<div class="about">
 					<a href="Services.html">Services</a>
-					
+
 					<a href="Contact.html">Contact us</a>
 				</div>
 				<div class="icon-footer">
@@ -481,6 +524,7 @@
 				</section>
 			</div>
 		</footer>
+
 		<script
 			type="module"
 			src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
@@ -489,23 +533,18 @@
 			src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 		<script src="script.js"></script>
 		<script>
-			document.addEventListener("DOMContentLoaded", function () {
-		  const userStatus = localStorage.getItem("userStatus");
-		  if (userStatus === "guest") {
-			  document.getElementById("Rewards").style.display = "none";
-			
-		  }
-		  else if (userStatus === "logged-in") {
-			  document.getElementById("UserProf").style.display = "block";
-			  document.getElementById("Rewards").style.display = "none";
-		  }
-		  else {
-			  document.getElementById("Rewards").style.display = "block";
-			  document.getElementById("UserProf").style.display = "block";
-		  }
-	  });
-	
-	  
-		  </script>
+			document.addEventListener('DOMContentLoaded', function () {
+				const userStatus = localStorage.getItem('userStatus');
+				if (userStatus === 'guest') {
+					document.getElementById('Rewards').style.display = 'none';
+				} else if (userStatus === 'logged-in') {
+					document.getElementById('UserProf').style.display = 'block';
+					document.getElementById('Rewards').style.display = 'none';
+				} else {
+					document.getElementById('Rewards').style.display = 'block';
+					document.getElementById('UserProf').style.display = 'block';
+				}
+			});
+		</script>
 	</body>
 </html>
