--- a/FinalCartpage.html
+++ b/FinalCartpage.html
@@ -46,9 +46,7 @@
 		<!-- ----------------------------------------------------------------------- -->
 		<!--                            Sticky Navigation                            -->
 		<!-- ----------------------------------------------------------------------- -->
-		<header
-			id="Page1"
-			class="header">
+		<header class="header">
 			<div class="logo">
 				<img
 					id="logo"
@@ -74,12 +72,6 @@
 					rel="noopener noreferrer"
 					>Rewards</a
 				>
-				<a
-					id="Incoming"
-					href="features.html"
-					rel="noopener noreferrer"
-					>Incoming Items</a
-				>
 				<input
 					type="search"
 					name="Searchbar"
@@ -96,7 +88,7 @@
 						id="UserProf"
 						name="person-circle-outline"></ion-icon
 				></a>
-				<a href="FinalCartpage.html"
+				<a href=""
 					><ion-icon
 						id="Cart"
 						name="cart"></ion-icon
@@ -190,7 +182,7 @@
 											required />
 									</div>
 
-									<div class="State-Form-Container">
+									<div class="State-Container">
 										<h6>State/Province/Region <span class="star">*</span></h6>
 										<select
 											id="State"
@@ -452,47 +444,12 @@
 							<h4 id="Q">Qty</h4>
 							<h4 id="P">Price</h4>
 						</div>
-						<div class="Item-Qty-Price-List"></div>
+						<div class="Item-Qty-Price-List">
+							
+						</div>
 					</div>
 
 					<div class="Cart-List"></div>
-				</div>
-			</div>
-		</section>
-
-		<!-- ----------------------------------------------------------------------- -->
-		<!--                                  Modal                                  -->
-		<!-- ----------------------------------------------------------------------- -->
-
-		<section class="modal Main">
-			<div class="popup-container">
-				<div
-					id="Main-Delivery-modal"
-					class="popup-card">
-					<div class="popup-head">
-						<h5>ORDER DETAILS</h5>
-						<button class="Closebtn Main">&times;</button>
-					</div>
-
-					<div class="P-D-btns-container">
-						<input
-							type="checkbox"
-							id="toggle"
-							class="toggleCheckbox" />
-						<label
-							for="toggle"
-							class="toggleContainer">
-							<div class="DeliveryDiv Main">Delivery</div>
-							<div class="PickupDiv Main">Pickup</div>
-						</label>
-					</div>
-					<p class="info-txt">Set a Delivery Address or Schedule Pickup</p>
-					<div class="form-container"></div>
-					<button
-						id="UpdateBtn"
-						class="Update-Btn">
-						Update
-					</button>
 				</div>
 			</div>
 		</section>
@@ -504,7 +461,7 @@
 			<div class="footer-container">
 				<div class="about">
 					<a href="Services.html">Services</a>
-
+					
 					<a href="Contact.html">Contact us</a>
 				</div>
 				<div class="icon-footer">
@@ -524,7 +481,6 @@
 				</section>
 			</div>
 		</footer>
-
 		<script
 			type="module"
 			src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
@@ -533,18 +489,23 @@
 			src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 		<script src="script.js"></script>
 		<script>
-			document.addEventListener('DOMContentLoaded', function () {
-				const userStatus = localStorage.getItem('userStatus');
-				if (userStatus === 'guest') {
-					document.getElementById('Rewards').style.display = 'none';
-				} else if (userStatus === 'logged-in') {
-					document.getElementById('UserProf').style.display = 'block';
-					document.getElementById('Rewards').style.display = 'none';
-				} else {
-					document.getElementById('Rewards').style.display = 'block';
-					document.getElementById('UserProf').style.display = 'block';
-				}
-			});
-		</script>
+			document.addEventListener("DOMContentLoaded", function () {
+		  const userStatus = localStorage.getItem("userStatus");
+		  if (userStatus === "guest") {
+			  document.getElementById("Rewards").style.display = "none";
+			
+		  }
+		  else if (userStatus === "logged-in") {
+			  document.getElementById("UserProf").style.display = "block";
+			  document.getElementById("Rewards").style.display = "none";
+		  }
+		  else {
+			  document.getElementById("Rewards").style.display = "block";
+			  document.getElementById("UserProf").style.display = "block";
+		  }
+	  });
+	
+	  
+		  </script>
 	</body>
 </html>
